[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
margin_right = 1011.0
margin_bottom = 592.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1029.0
margin_bottom = 605.0
color = Color( 0.203922, 0.0392157, 0.0392157, 1 )

[node name="Login" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_rotation = 0.137581

[node name="Username" type="LineEdit" parent="Login"]
margin_left = 384.0
margin_top = 295.072
margin_right = 656.0
margin_bottom = 319.072
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="Login"]
margin_left = 384.0
margin_top = 336.0
margin_right = 656.0
margin_bottom = 362.0
secret = true
placeholder_text = "Password"

[node name="LoginBtn" type="Button" parent="Login"]
margin_left = 467.161
margin_top = 482.88
margin_right = 582.161
margin_bottom = 542.88
rect_pivot_offset = Vector2( -318, -34 )
text = "Login"

[node name="Register" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_rotation = 0.137581

[node name="Newuser" type="LineEdit" parent="Register"]
margin_left = 384.0
margin_top = 295.072
margin_right = 656.0
margin_bottom = 319.072
placeholder_text = "Username"

[node name="NewPass" type="LineEdit" parent="Register"]
margin_left = 384.0
margin_top = 336.0
margin_right = 656.0
margin_bottom = 362.0
secret = true
placeholder_text = "Password"

[node name="RegisterBtn" type="Button" parent="Register"]
margin_left = 460.981
margin_top = 407.894
margin_right = 584.981
margin_bottom = 465.894
rect_pivot_offset = Vector2( -318, -34 )
text = "Register"

[node name="CreateAccountBtn" type="Button" parent="."]
margin_left = 352.0
margin_top = 442.0
margin_right = 476.0
margin_bottom = 500.0
rect_pivot_offset = Vector2( -318, -34 )
text = "Creat account"

[node name="LoginBtn" type="Button" parent="."]
margin_left = 553.0
margin_top = 443.0
margin_right = 668.0
margin_bottom = 503.0
rect_pivot_offset = Vector2( -318, -34 )
text = "Login"

[node name="Message" type="Label" parent="."]
margin_left = 411.0
margin_top = 388.0
margin_right = 624.0
margin_bottom = 425.0
align = 1
